# gRPC-Go-for-Professionals

./: .gitattributes  .gitignore  BUILD.bazel  Makefile  README.md  TODO.md  go.work  go.work.sum  proto  versions.bzl
.github/workflows/: docker.yml  updates.yml  validate.yml
certs/: README.md
chapter1/: Bidi Streaming.pcapng  Client Streaming.pcapng  README.md  Server Streaming.pcapng  Unary RPC.pcapng
chapter2/: BUILD.bazel  README.md  account.pb.go  account.proto  account.txt  fixed.txt  floating_point.txt  length-delimited.txt  repeated.txt  sfixed.txt  wrappers.proto
chapter3/: BUILD.bazel  README.md  go.mod  go.sum  main.go
chapter3/proto/: BUILD.bazel  account.proto  accounts.proto
chapter4/: .bazelrc  BUILD.bazel  README.md  buf.gen.yaml  deps.bzl  go.work.sum  versions.bzl
chapter4/client/: BUILD.bazel  go.mod  go.sum  main.go
chapter4/proto/: go.mod  go.sum
chapter4/proto/dummy/v1/: BUILD.bazel  dummy.proto
chapter4/scripts/: startupvalidator.sh
chapter4/server/: BUILD.bazel  go.mod  go.sum  main.go
chapter5/: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.work.sum  versions.bzl
chapter5/client/: BUILD.bazel  go.mod  go.sum  main.go
chapter5/proto/: go.mod
chapter5/proto/todo/v1/: BUILD.bazel  todo.proto
chapter5/server/: BUILD.bazel  db.go  go.mod  go.sum  impl.go  in_memory.go  main.go  server.go
chapter6/: BUILD.bazel  README.md  deps.bzl  go.work.sum  versions.bzl
chapter6/client/: BUILD.bazel  go.mod  go.sum  main.go
chapter6/proto/: go.mod  go.sum
chapter6/proto/todo/v1/: BUILD.bazel  todo.proto
chapter6/proto/todo/v2/: BUILD.bazel  todo.proto
chapter6/server/: BUILD.bazel  go.mod  go.sum  impl.go  in_memory.go  main.go  server.go
chapter7/: BUILD.bazel  README.md  go.work  go.work.sum
chapter7/certs/: BUILD.bazel
chapter7/client/: BUILD.bazel  Dockerfile  go.mod  interceptors.go  main.go
chapter7/k8s/: client.yaml  server.yaml
chapter7/proto/: go.mod
chapter7/proto/todo/v1/: BUILD.bazel  todo.proto
chapter7/proto/todo/v2/: BUILD.bazel  todo.proto
chapter7/server/: BUILD.bazel  Dockerfile  db.go  go.mod  go.sum  impl.go  in_memory.go  interceptors.go  main.go  server.go
chapter8/: BUILD.bazel  README.md  WORKSPACE.bazel  buf.gen.yaml  buf.yaml  certs  deps.bzl  go.work  go.work.sum
chapter8/certs/: BUILD.bazel
chapter8/client/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go
chapter8/k8s/: server.yaml
chapter8/proto/: go.mod  go.sum
chapter8/proto/todo/v1/: BUILD.bazel  todo.proto
chapter8/proto/todo/v2/: BUILD.bazel  todo.proto
chapter8/proto/validate/: BUILD.bazel
chapter8/server/: BUILD.bazel  Dockerfile  go.mod  go.sum  impl.go  in_memory.go  interceptors.go  limit.go  main.go  server.go
chapter9/: BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.work  go.work.sum  versions.bzl
chapter9/client/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go
chapter9/envoy/: Dockerfile  deployment.yaml  envoy.yaml  service.yaml
chapter9/k8s/: client.yaml  server.yaml
chapter9/proto/: go.mod  go.sum
chapter9/proto/todo/v1/: BUILD.bazel  todo.proto
chapter9/proto/todo/v2/: BUILD.bazel
chapter9/proto/validate/: BUILD.bazel
chapter9/server/: BUILD.bazel  Dockerfile  fake_db.go  go.mod  go.sum  impl.go  impl_test.go  in_memory.go  interceptors.go  main.go  server.go  server_test.go  test_options.go
helpers/: README.md  go.mod  go.sum  gzip.go  integers.go  split.go  tags.go
helpers/proto/: split.proto  tags.proto  todo.proto
proto/: go.mod  go.sum
proto/todo/v2/: todo.proto
scripts/: README.md  cleanall.sh  constants.sh  dockerbuild.sh  startupvalidator.sh  updateall.sh
