load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "Microservice_proto",
    srcs = [
        "account.proto",
        "wrappers.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "Microservice_go_proto",
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice",
    proto = ":Microservice_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "Implementing-gRPC-in-Golang-Microservice",
    embed = [":Microservice_go_proto"],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice",
    visibility = ["//visibility:public"],
)
