load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude proto/**/*.go
# gazelle:prefix github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/chapter6
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.work",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
