load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_proto",
    srcs = [
        "account.proto",
        "accounts.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//:root_proto"],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/chapter3/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
    deps = ["//:account.proto"],
)

go_library(
    name = "proto",
    embed = [":proto_go_proto"],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/chapter3/proto",
    visibility = ["//visibility:public"],
)
