load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "server",
    embed = [":server_lib"],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/chapter4/server",
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/chapter4/server",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
    ],
)
