load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "server",
    embed = [":server_lib"],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/server",
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = [
        "db.go",
        "impl.go",
        "in_memory.go",
        "interceptors.go",
        "main.go",
        "server.go",
    ],
    data = [
        "//certs:server_cert.pem",
        "//certs:server_key.pem",
    ],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/todo/v2:todo",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_exp//slices",
    ],
)
