load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "server",
    embed = [":server_lib"],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/server",
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = [
        "db.go",
        "fake_db.go",
        "impl.go",
        "in_memory.go",
        "interceptors.go",
        "limit.go",
        "main.go",
        "server.go",
        "test_options.go",
    ],
    data = [
        "//certs:server_cert.pem",
        "//certs:server_key.pem",
    ],
    importpath = "github.com/PacktPublishing/Implementing-gRPC-in-Golang-Microservice/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/todo/v2:todo",
        "@com_github_grpc_ecosystem_go_grpc_middleware_providers_prometheus//:prometheus",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/auth",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_exp//slices",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "impl_test.go",
        "server_test.go",
    ],
    embed = [":server_lib"],
    deps = [
        "//proto/todo/v2:todo",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
        "@org_golang_google_grpc//test/bufconn",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
