load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_proto",
    srcs = ["dummy.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/PacktPublishing/gRPC-Go-for-Professionals/proto/dummy/v1",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "dummy",
    embed = [":v1_go_proto"],
    importpath = "github.com/PacktPublishing/gRPC-Go-for-Professionals/proto/dummy/v1",
    visibility = ["//visibility:public"],
)
