load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["todo.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_library(
    name = "todo",
    embed = [":v1_go_proto"],
    importpath = "github.com/PacktPublishing/gRPC-Go-for-Professionals/proto/todo/v1",
    visibility = ["//visibility:public"],
)

go_library(
    name = "v1",
    srcs = ["todo.pb.validate.go"],
    importpath = "",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/PacktPublishing/gRPC-Go-for-Professionals/proto/todo/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
)
